# shimmeringmoon

./: .gitignore  Cargo.toml  README.md  arcaea.py  example.envrc  flake.nix  schema.sql  screen.py  songs.csv  test.typ
data/: charts.csv  jackets.csv  shorthands.csv  ui.txt
info/: charts.csv  songs.csv
migrations/01-create-users-table/: up.sql
migrations/02-create-charts-and-songs/: up.sql
migrations/03-create-plays-and-scores/: up.sql
migrations/04-auto-delete-scores/: up.sql
migrations/05-metadata/: up.sql
nix/: cc-data.nix  chart-dir-checker.nix  debundled-darkness.nix  debundled-void.nix  exo.nix  fonts.nix  geosans-light.nix  glass-bundler.nix  glass-server-db-updater.nix  kazesawa.nix  overlay.nix  private-config.nix  shimmeringextra.nix  shimmeringmoon.nix
scripts/: chart-dir-checker.py  copy-chart-info.sh  export-chart-info.sh  import-charts.py  import-jacket.sh  import_jacket.sh  main.py  prepare-songs.sh  reimport-songs.sh  update-db-songs.py
shimmering/config/: charts.csv  shorthands.csv
src/: assets.rs  bitmap.rs  chart.rs  commands.rs  context.rs  image.rs  jacket.rs  levenshtein.rs  lib.rs  logs.rs  main.rs  score.rs  time.rs  transform.rs  user.rs  utils.rs
src/arcaea/: achievement.rs  chart.rs  import_charts.rs  jacket.rs  mod.rs  notecounts.csv  play.rs  ptt.json  rating.rs  score.rs
src/cli/: analyse.rs  context.rs  mod.rs  prepare_jackets.rs
src/commands/: calc.rs  chart.rs  discord.rs  mod.rs  score.rs  stats.rs  user.rs  utils.rs
src/commands/utils/: mod.rs  two_columns.rs
src/context/: db.rs  hash.rs  mod.rs  paths.rs  process_jackets.rs
src/ocr/: mod.rs  ui.rs  ui_interp.rs
src/private_server/: mod.rs
src/recognition/: fuzzy_song_name.rs  hyperglass.rs  mod.rs  recognize.rs  ui.rs  ui.txt
test/commands/calc/expected/basic_usage/: 0.toml
test/commands/calc/rating/basic_usage/: 0.toml
test/commands/chart/best/no_scores/: 0.toml
test/commands/chart/best/pick_correct_score/: 0.toml  in_1.toml  in_2.toml  out_1.toml
test/commands/chart/info/last_byd/: 0.toml  1.toml
test/commands/chart/info/no_suffix/: out_0.toml
test/commands/chart/info/specify_difficulty/: 0.toml
test/commands/score/delete/delete_multiple/: 0.toml  1.toml  2.toml  in_1.toml
test/commands/score/delete/delete_twice/: 1.toml
test/score/magic/single_pic/: 0.toml
test/score/magic/weird_kerning/: 0.toml
(+10 files in other folders)
