[package]
name = "shimmeringmoon"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
freetype-rs = "0.36.0"
image = "0.25.2"
num = "0.4.3"
plotters = { git="https://github.com/starlitcanopy/plotters.git", rev="986cd959362a2dbec8d1b25670fd083b904d7b8c", features=["bitmap_backend"] }
poise = "0.6.1"
hypertesseract = { features=["image"], git="https://github.com/BlueGhostGH/hypertesseract.git", rev="4e05063" }
tokio = {version="1.38.0", features=["rt-multi-thread"]}
imageproc = "0.25.0"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
rusqlite_migration = {version="1.3.0-alpha-without-tokio.1", features = ["from-directory"]}
include_dir = "0.7.4"
serde = "1.0.209"
toml = "0.8.19"
tempfile = "3.12.0"
clap = { version = "4.5.17", features = ["derive"] }
postcard = { version = "1.0.10", features = ["use-std"], default-features = false }
serde_with = "3.9.0"
anyhow = "1.0.87"

[profile.dev.package."*"]
opt-level = 3
